[project]
name = "parser"
version = "0.1.0"
description = "Parsing service — Extracts languages into an AST tree for improved storage/relationship mapping in RAG / Other"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.29,<1",
    "pydantic>=2,<3",
    "tree-sitter>=0.23,<1",
    "tree-sitter-language-pack>=1.6,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.27,<1",
    "ruff>=0.4,<1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]